tests/rosetta/transpiler/Haskell/floyd-warshall-algorithm.error
run: exit status 1

/workspace/mochi/tests/rosetta/transpiler/Haskell/floyd-warshall-algorithm.hs:99:9: error:
    parse error (possibly incorrect indentation or mismatched brackets)
   |
99 |         let vi = v - 1
   |         ^
